css/style.css
* {
    margin: 0;
}

header {
    width: auto;
    height: 100px;
    background-size: 30%;
    background-image: url(../img/pattern.png);
    background-color: #1BB1EA;
    position: relative;
    
}

.logo_img {
    position: absolute;
    background-image: url(../img/logo.svg);
    height: 100px;
    width: 200px;
    background-repeat: no-repeat;
    background-position: 10px 45px;
  
}

main,footer {
    padding-left: 10px;
}

h1 {
    font-size: 40px;
}

h3 {
    color: gray;
    font-size: 20px;
}

.creator_subt {
    color: #1BB1EA;
}

.creation_date {
    color: gray;
    font-size: 12px;
}

.photo_description {
    font-size: 12px;
}

.evidence_text {
    background-color: orange;
}

table {
    text-align: left;    
}

.third_clmn {
    width: 50%;
}

.table_head_color {
    background-color: #1BB1EA;
}

.table_body_color {
    background-color: #d2f2ff;
}

.footer_p {
    color: gray;
}

.img_footer_1 {
    background-image: url(../img/monitor.jpg);
    background-repeat: no-repeat;
    width: 350px;
    height: 200px;
    background-size: contain;
}

.img_footer_2 {
    background-image: url(../img/graph.jpg);
    background-repeat: no-repeat;
    width: 350px;
    height: 200px;
    background-size: contain;
}

.text_over_img {
    color: white;
    font-weight: bold;
    text-align: left;
    font-size: 30px;
    padding: 10px;
}

